# IGLCM

./: README.md
cpp/: CMakeLists.txt  GLCM.h  GLCM.hxx  ParseUtils.cpp  ParseUtils.h  boost_program_options_types.cpp  boost_program_options_types.h  cli_parser.cpp  cli_parser.h  integral.cpp  standard.cpp
cpp/cmake/Modules/: FindLog4Cxx.cmake
ruby/: GLCMUtils.rb  test.rb
